--- a/.github/workflows/docker-image-push.yaml
+++ b/.github/workflows/docker-image-push.yaml
@@ -11,11 +11,11 @@ jobs:                       #  we spcify jobs
            uses: actions/checkout@v4   # this for the checkout latest code 
          - name:  Build and docker image # you can spsifcy the name of your choise 
            run: |
-             docker build  -t ${{ secrets.DOCKER_HUB_USERNAME}}/github-action-prooject:latest .
+             docker build  -t ${{ secrets.DOCKER_HUB_USERNAME}}/github-action-prooject:dev .
          - name: push docker images to dockerhub  # once image is build we now pushing to dockerhub 
            run: |
              docker login -u ${{ secrets.DOCKER_HUB_USERNAME}} -p ${{ secrets.DOCKER_HUB_TOKEN}}
-             docker push ${{ secrets.DOCKER_HUB_USERNAME}}/github-action-prooject:latest 
+             docker push ${{ secrets.DOCKER_HUB_USERNAME}}/github-action-prooject:dev 
             
 
 
